Add tests for card search

--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,8 @@ verify_ssl = true
 
 [dev-packages]
 black = "*"
+pytest = "*"
+pytest-asyncio = "*"
 
 [packages]
 "discord.py" = "*"
@@ -13,3 +15,6 @@ unitypack = {git = "https://github.com/HearthSim/UnityPack"}
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
